--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,56 @@
+########################
 # Visual Studio
+########################
 .vs/
 *.user
 *.suo
 *.slnx.sqlite
+*.wsuo
+
+########################
+# Build outputs
+########################
+bin/
+obj/
+*.dll
+*.exe
+*.pdb
+*.cache
+*.log
+
+########################
+# Database, runtime
+########################
 *.db
 *.db-shm
 *.db-wal
-*.wsuo
 
-# Build
-bin/
-obj/
+########################
+# Sensitive config files
+########################
+.env
+appsettings.Development.json
+appsettings.*.secrets.json
+secrets.json
 
-# Node.js (nếu frontend dùng React/Vite)
+########################
+# ASP.NET Scaffolding
+########################
+ScaffoldingReadMe.txt
+
+########################
+# Node.js (nếu có frontend dùng React/Vite)
+########################
 node_modules/
 dist/
-.env
+build/
+
+########################
+# Others
+########################
+*.ncrunch*
+*.localhistory/
+*.idea/
+*.vscode/
+*.DS_Store
+Thumbs.db
